crates/aven-parser/tests/fixtures/parser/invalid/required-param-after-default.av
f = (x = 1, y) => x
